# janus

./: .pre-commit-config.yaml  README.md  activate-janus.zsh  dataset.jsonl  mkdocs.yml  pyproject.toml  ruff.toml
.codex/: AGENTS.md
completions/: janus.zsh
src/janus/: __init__.py  cli.py  dataset.py  pcap.py
src/janus/model/: request_response_pair.py  tcp_payload.py
tests/: __init__.py  test_pcap.py
