[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/janus"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "janus"
version = "0.1.0"
description = "Project created with Cruft"
authors = [{name = "Christoforos Vasilatos"}]
requires-python = ">=3.14"

dependencies = [
    "decima @ git+https://github.com/cvasilatos/decima.git@f05d99edb1f60d0f5236e9d4099883d8448e7f38",
    "typer>=0.16.0",
]

[project.scripts]
janus = "janus.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

docs = [
    "mkdocs-material>=9.7.2",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-include-markdown-plugin>=7.2.1",
]

[tool.uv]
managed = true

[tool.ty.environment]
python = ".venv/bin/python"
python-version = "3.14"
root = ["src/janus"]

[tool.ty.rules]
all = "error"
